[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "titantuner"
authors = [
    {name = "Thomas Nipen", email = "thomasnn@met.no"}
]
description = "A package for tuning quality control parameters in titanlib"
keywords = ["meteorology", "observations", "quality control"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    ]
dependencies = [
    "bokeh<3",
    "matplotlib",
    "numpy",
    "scipy",
    "titanlib>=0.3.3",
]

dynamic = ["version"]

[project.scripts]
titantuner = "titantuner:main"

[tool.setuptools.packages.find]
include = ["titantuner"]

[tool.setuptools.dynamic]
version = {attr = "titantuner.VERSION"}

[tool.setuptools.package-data]
titantuner = ["data/*.txt"]
